--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,11 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Jack Mulqueeney"
+  pronouns         : # example: "she/her"  
   bio              : "Pre-doc at UChicago"
+  location         : "Chicago"
+  employer         : "University of Chicago"
+  uri              : # URL
   email            : "jmulqueeney@uchicago.edu"
 
   # Academic websites
@@ -78,9 +82,7 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Articles' 
-  theses:
-    title: 'Theses'   
+    title: 'Articles'    
   conferences:
     title: 'Conference Papers'
 
