update mp bulletin text, and changing publiccations to papers

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ publication_category:
   conferences:
     title: 'Conference Papers'
   theses:
-    title: 'Theses'
+    title: 'Thesis'
   working_papers:
     title: 'Working papers'
   policy_papers:
